# cpp_lessons

./: .gitignore
lesson1/presentation/: 1.tex  highlight.tex  presentation.lyx
lesson1/project/: .clang-format  CMakeLists.txt  README.md
lesson1/project/src/: CMakeLists.txt
lesson1/project/src/basic_syntax/: CMakeLists.txt  main.cpp
lesson1/project/src/dynamic_polymorph/: CMakeLists.txt  main.cpp
lesson1/project/src/generic_programming/: CMakeLists.txt  main.cpp
lesson1/project/src/hello_world/: CMakeLists.txt  main.cpp
lesson1/project/src/mypth1/: CMakeLists.txt  main.cpp
lesson1/project/src/mypth2/: CMakeLists.txt  main.cpp
lesson1/project/src/static_polymorph/: CMakeLists.txt  main.cpp
lesson2/presentation/: presentation.lyx
lesson2/project/: CMakeLists.txt  Makefile  README.md
lesson2/project/include/: game.h
lesson2/project/src/: CMakeLists.txt  game.cpp  main.cpp
lesson2/project/src/test_project/: CMakeLists.txt
lesson3/presentation/: presentation.lyx
